Renamed project and updated file activity_login.xml

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,138 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:viewBindingIgnore="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context=".LoginActivity">
+    android:background="@android:color/white"
+    tools:context=".LoginActivity"
+    tools:viewBindingIgnore="true">
 
-    <TextView
-        android:id="@+id/tvTituloApp"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clLoginEmail"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:fontFamily="sans-serif-black"
-        android:text="VemCar"
-        android:textColor="@color/colorSecundary"
-        android:textSize="52sp"
-        android:textStyle="bold"
-        android:typeface="serif"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/imgDiv"
+        app:layout_constraintTop_toBottomOf="@+id/cardView5"
+        tools:layout_editor_absoluteX="16dp">
 
-    <EditText
-        android:id="@+id/editNome"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/edit_login"
-        android:ems="10"
-        android:inputType="textPersonName|textCapWords"
-        android:paddingLeft="16dp"
-        android:text="Nome"
-        android:textColor="@android:color/black"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTituloApp" />
+        <EditText
+            android:id="@+id/editNome"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/edit_login"
+            android:ems="10"
+            android:inputType="textPersonName|textCapWords"
+            android:paddingLeft="16dp"
+            android:text="Nome"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView14"
+            tools:visibility="visible" />
 
-    <EditText
-        android:id="@+id/editEmail"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/edit_login"
-        android:ems="10"
-        android:inputType="textWebEmailAddress|textEmailAddress|textEmailSubject"
-        android:paddingLeft="16dp"
-        android:text="Email"
-        android:textColor="@android:color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editNome" />
+        <EditText
+            android:id="@+id/editEmail"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/edit_login"
+            android:ems="10"
+            android:inputType="textWebEmailAddress|textEmailAddress|textEmailSubject"
+            android:paddingLeft="16dp"
+            android:text="Email"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editNome" />
 
-    <EditText
-        android:id="@+id/editSenha"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/edit_login"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:paddingLeft="16dp"
-        android:text="Senha"
-        android:textColor="@android:color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editEmail" />
+        <EditText
+            android:id="@+id/editSenha"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/edit_login"
+            android:ems="10"
+            android:inputType="textPassword"
+            android:paddingLeft="16dp"
+            android:text="Senha"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editEmail" />
 
-    <Button
-        android:id="@+id/bLogar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/button_login"
-        android:text="Login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editSenha" />
+        <Button
+            android:id="@+id/bLogar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/button_login02"
+            android:text="Login"
+            android:textColor="@android:color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editSenha" />
+
+
+        <LinearLayout
+            android:id="@+id/llInfo01"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bLogar">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="Esqueceu sua senha?" />
+
+            <TextView
+                android:id="@+id/tvRedefinir"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="Redefinir"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="16dp"
+            android:text="Efetue o login"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/imgDiv"
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="216dp"
+        app:layout_constraintBottom_toBottomOf="@+id/llInfo02"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/llInfo01"
-        app:srcCompat="@color/colorAccent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@color/com_facebook_button_background_color_selected" />
 
-    <LinearLayout
-        android:id="@+id/llInfo01"
-        android:layout_width="0dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView5"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/bLogar"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/bLogar"
-        app:layout_constraintTop_toBottomOf="@+id/bLogar">
+        app:cardBackgroundColor="@color/browser_actions_bg_grey"
+        app:cardCornerRadius="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/llTitulo"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:gravity="center"
-            android:text="Esqueceu sua senha?"
-            android:textColor="@android:color/white" />
+            android:layout_marginTop="32dp"
+            android:orientation="horizontal"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp">
 
-        <TextView
-            android:id="@+id/tvRedefinir"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="Redefinir"
-            android:textColor="@android:color/white"
-            android:textSize="12sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/reem_kufi_regular"
+                android:gravity="end"
+                android:text="Simplifi"
+                android:textColor="@color/com_facebook_button_background_color_selected"
+                android:textSize="42sp" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/reem_kufi_regular"
+                android:text="Car"
+                android:textColor="@color/com_facebook_button_login_background_color"
+                android:textSize="42sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:id="@+id/llInfo02"
@@ -142,8 +188,7 @@
         android:layout_marginEnd="32dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingTop="32dp"
-        android:paddingBottom="32dp"
+        android:paddingBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgBack">
@@ -153,19 +198,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="end"
-            android:paddingRight="8dp"
-            android:text="Não tem uma conta?"
-            android:textColor="@android:color/white" />
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="Não tem uma conta?" />
 
         <TextView
             android:id="@+id/tvCadastrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingLeft="8dp"
+            android:gravity="center"
+            android:padding="8dp"
+            android:paddingRight="32dp"
             android:text="Cadastre-se"
-            android:textColor="@android:color/white"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -174,11 +219,11 @@
         android:id="@+id/tvOu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@android:color/white"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:text="Ou"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imgDiv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -188,7 +233,8 @@
     <LinearLayout
         android:id="@+id/ll3"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/llInfo02"
@@ -205,7 +251,6 @@
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/button_facebook"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -226,12 +271,11 @@
                 android:id="@+id/tvFB"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="20dp"
                 android:text="Entrar com o Facebook"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imgFB"
-                app:layout_constraintEnd_toEndOf="@+id/imgFB"
                 app:layout_constraintStart_toEndOf="@+id/f_icon_fb"
                 app:layout_constraintTop_toTopOf="@+id/imgFB" />
 
@@ -262,18 +306,17 @@
                 app:layout_constraintBottom_toBottomOf="@+id/imgGoogle"
                 app:layout_constraintStart_toStartOf="@+id/imgGoogle"
                 app:layout_constraintTop_toTopOf="@+id/imgGoogle"
-                app:srcCompat="@drawable/g_white_icon" />
+                app:srcCompat="@drawable/googleg_standard_color_18" />
 
             <TextView
                 android:id="@+id/tvGoogle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="35dp"
+                android:layout_marginStart="16dp"
                 android:text="Entrar com o Google"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imgGoogle"
-                app:layout_constraintEnd_toEndOf="@+id/imgGoogle"
                 app:layout_constraintStart_toEndOf="@+id/g_icon_google"
                 app:layout_constraintTop_toTopOf="@+id/imgGoogle" />
 
@@ -285,10 +328,12 @@
         android:layout_width="68dp"
         android:layout_height="48dp"
         android:layout_marginStart="32dp"
+        android:layout_marginBottom="24dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/llInfo02"
-        app:srcCompat="@drawable/b_back" />
+        app:srcCompat="@drawable/b_back_02"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
