--- a/app/src/main/res/drawable/button_login02.xml
+++ b/app/src/main/res/drawable/button_login02.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <gradient android:startColor="#2760C1" android:endColor="#5172B3"  android:angle="90"></gradient>
+    <gradient android:startColor="#6E8CFA" android:endColor="#8099E3"  android:angle="90"></gradient>
     <corners android:radius="15dip"></corners>
 
 </shape>
