--- a/app/src/main/res/drawable/bg_home_shadow.xml
+++ b/app/src/main/res/drawable/bg_home_shadow.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <gradient android:startColor="#C5CAFB" android:endColor="#FFFFFF"  android:angle="90" android:centerColor="@color/browser_actions_bg_grey"/>
+    <gradient android:startColor="#fff" android:endColor="#FFF"  android:angle="90"/>
     <corners android:bottomRightRadius="54dp" android:bottomLeftRadius="54dp"></corners>
 
 </shape>
